[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-slot-filler"
version = "0.1.0"
description = "Fill named {slot} placeholders in template strings for LLM agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["agent", "llm", "template", "slot", "placeholder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
# Tests use only the standard library (unittest); dev deps are for linting.
dev = ["ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_slot_filler"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# The test module inserts ``src/`` on sys.path before importing the package so
# the suite is runnable without an editable install; that import is intentionally
# placed after the bootstrap code (E402).
"tests/test_agent_slot_filler.py" = ["E402"]
